improve flash messages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
 
   <body>
   <%= render "layouts/navbar" %>
+  <%= render "shared/flash" %>
+
   <section class="section">
     <div class="container">
       <%= yield %>
