--- a/app/views/servings/_serving.html.erb
+++ b/app/views/servings/_serving.html.erb
@@ -1,4 +1,4 @@
 <tr id="<%= dom_id serving %>">
-  <td><%= intake_description(serving.intake_id) %></td>
+  <td><%= serving.intake.description %></td>
   <td><%= serving.kcal %> kcal</td>
   <td><%= serving.amount %> g</td>
