--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,9 +1,8 @@
-<%= flash.inspect %>
 <% flash.each do |name, msg| -%>
   <% if msg.is_a?(String) -%>
     <%= tag.div class: ["notification", "is-#{name}"] do %>
       <%= tag.button class: "delete" %>
-        <%= concat msg %>
+      <%= msg %>
     <% end -%>
   <% end -%>
 <% end -%>
