--- a/app/views/servings/_form.html.erb
+++ b/app/views/servings/_form.html.erb
@@ -22,7 +22,7 @@
   </div>
 
   <div>
-    <%= form.label :amount, style: "display: block" %>
+    <%= form.label "Amount in grams", style: "display: block" %>
     <%= form.number_field :amount %>
   </div>
 
