--- a/app/views/intakes/_intake.html.erb
+++ b/app/views/intakes/_intake.html.erb
@@ -1,4 +1,5 @@
 <tr id="<%= dom_id intake %>">
   <td><%= intake.description %></td>
   <td><%= intake.ean %></td>
-  <td><%= intake.kcal_per_100 %></td>
+  <td><%= intake.kcal_per_100 %> kcal</td>
+  <td><%= intake.common_portion %> g</td>
