--- a/app/views/intakes/index.html.erb
+++ b/app/views/intakes/index.html.erb
@@ -6,6 +6,7 @@
       <td>description</td>
       <td>ean</td>
       <td>kcal per 100g intake</td>
+      <td>common portion</td>
         <td></td>
     </thead>
     <tbody><% @intakes.each do | intake | %>
