--- a/app/views/intakes/show.html.erb
+++ b/app/views/intakes/show.html.erb
@@ -4,6 +4,7 @@
       <td>description</td>
       <td>ean</td>
       <td>kcal per 100g intake</td>
+      <td>common portion</td>
     <td></td>
   </thead>
   <tbody>
