--- a/app/views/measurements/_measurement.html.erb
+++ b/app/views/measurements/_measurement.html.erb
@@ -1,3 +1,3 @@
 <tr id="<%= dom_id measurement %>">
-  <td><%= measurement.when.strftime("%F") %></td>
+  <td><%= measurement.consumed_at.strftime("%F") if measurement.consumed_at %></td>
   <td><%= measurement.weight %> kg</td>
