--- a/app/views/servings/_form.html.erb
+++ b/app/views/servings/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div>
-    <%= form.label :when, style: "display: block" %>
-    <%= form.datetime_field :when %>
+    <%= form.label :consumed_at, style: "display: block" %>
+    <%= form.datetime_field :consumed_at %>
   </div>
 
   <div>
