fix another when, detail to graph, fix build process

--- a/app/views/measurements/_form.html.erb
+++ b/app/views/measurements/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div>
-    <%= form.label :consumed_at, style: "display: block" %>
-    <%= form.datetime_field :consumed_at %>
+    <%= form.label :measured_at, style: "display: block" %>
+    <%= form.datetime_field :measured_at %>
   </div>
 
   <div>
